@@ -11,6 +11,10 @@ Package author: Ankush Mitra
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-09
+2015-06-29 Christopher O'Grady
+Add some boost-python 1D/2D histograms
+
 Tag: V00-01-08
 2015-05-18 Christopher O'Grady
 Some bug fixes from Chuck for AreaDetHist.
